--- a/public/css/welcomeStyle.css
+++ b/public/css/welcomeStyle.css
@@ -1,32 +1,10 @@
-html, body {
-    height: 100%;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-body {
-    display: flex;
-    align-items:center;
-    flex-direction: column;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #f5f5f5;
-}
-
-.button{
-    background-color: blue;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline;
-    font-size: 16px;
-    border-radius: 2rem;
-    margin: .5vh 0 .5vh 0;
-    transition-duration: 0.4s;
-}
-
-.button:hover{
-    background-color: white;
-    color: black;
-    border: 2px solid blue;
+.success-alert-css{
+    position: absolute;
+    width: fit-content;
+    top: 10%;
 }
